--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ typer = "^0.12.3"
 nicegui = {extras = ["highcharts"], version = "^1.4.24"}
 pendulum = "^3.0.0"
 yfinance = "^0.2.40"
+plotille = "^5.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.22.1"
