--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ plotille = "^5.0.0"
 sqlalchemy = "^2.0.30"
 psycopg2-binary = "^2.9.9"
 pyyaml = "^6.0.1"
+pydantic-settings = "^2.3.1"
+pydantic = "^2.7.3"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.22.1"
