--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,12 @@ psycopg2-binary = "^2.9.9"
 pyyaml = "^6.0.1"
 pydantic-settings = "^2.3.1"
 pydantic = "^2.7.3"
+uvicorn = "^0.30.1"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.22.1"
 pytest = "^8.1.1"
+testcontainers = "^4.5.1"
 
 [build-system]
 requires = ["poetry-core"]
