--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pyyaml = "^6.0.1"
 pydantic-settings = "^2.3.1"
 pydantic = "^2.7.3"
 uvicorn = "^0.30.1"
+httpx = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.22.1"
