--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ httpx = "^0.27.0"
 ipython = "^8.22.1"
 pytest = "^8.1.1"
 testcontainers = "^4.5.1"
+ruff = "^0.8.1"
 
 [build-system]
 requires = ["poetry-core"]
