:rocket: Migrate to uv

--- a/.github/workflows/reusable-tests.yaml
+++ b/.github/workflows/reusable-tests.yaml
@@ -16,13 +16,13 @@ jobs:
         python-version: 3.11
 
     - name: Install poetry
-      run: curl -sSL https://install.python-poetry.org | python - --version 1.8.3
+      run: curl -LsSf https://astral.sh/uv/install.sh | sh
 
     - name: Install dependencies
       working-directory: ${{ inputs.project-path }}
-      run: poetry install
+      run: uv pip install --system .
         
     - name: Run tests with pytest
       working-directory: ${{ inputs.project-path }}
-      run: poetry run pytest .
+      run: uv run pytest .
 
