--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
   "uvicorn<1.0.0,>=0.30.1",
   "yfinance<1.0.0,>=0.2.40",
   "fastapi>=0.115.6",
+  "matplotlib>=3.9.3",
 ]
 
 [project.scripts]
