--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
   "pyyaml<7.0.0,>=6.0.1",
   "sqlalchemy<3.0.0,>=2.0.30",
   "typer<1.0.0,>=0.12.3",
-  "uvicorn<1.0.0,>=0.30.1",
+  "uvicorn>=0.30.1,<1.0.0",
   "yfinance<1.0.0,>=0.2.40",
   "fastapi>=0.115.6",
   "matplotlib>=3.9.3",
